feat(LicenceResponse): Issue one response for all results instead of one response for each